--- a/index.html
+++ b/index.html
@@ -48,6 +48,58 @@
             <img src="image/hom4.png" alt="">
         </div>
     </section>
+    <!-- section about -->
+     <section id="about" class="about">
+       <div class="heading">
+        <h1>About Us</h1>
+        <h4>Your Trusted Website</h4>
+       </div>
+       <div class="about-content">
+        <div class="top-about">
+            <div class="t-card">
+                <h1>Who We Are</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius non beatae voluptatibus nemo reiciendis odit esse eos rem deserunt repellendus neque magni eligendi unde, corporis sit asperiores dolores! Incidunt, minima.</p>
+            </div>
+            <div class="t-card">
+                <h1>Our Mission</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse id tenetur impedit quas architecto repellendus distinctio nihil fugit? Illum inventore minima officia tempore culpa distinctio! Similique eos totam aperiam at!</p>
+            </div>
+            <div class="t-card">
+                <h1>Why Choose Us ?</h1>
+                <ul>
+                    <li>High Quality Products</li>
+                    <li>Secure Payment</li>
+                    <li>Fast Delivery</li>
+                    <li>24/7 Customer Support</li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom-about">
+            <div class="b-card">
+                <h2>1200+</h2>
+                <h3>Happy Customers</h3>
+            </div>
+            <div class="b-card">
+                <h2>500+</h2>
+                  <h3>Products</h3>
+            </div>
+            <div class="b-card">
+                <h2>3500+</h2>
+                <h3>Order Delivery</h3>
+            </div>
+        </div>
+       </div>
+     </section>
+
+     <!-- about Section -->
+      <section id="product" class="product">
+          <h1>Our Products</h1>
+          <div class="main-product">
+             <div class="product-list" id="productList"></div>
+          </div>
+      </section>
+
+      <script src="script.js"></script>
 </body>
 
 </html>
