--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Search Product..">
             </div>
-            <div class="cartCount">
+            <div class="cartCount" id="c-cart-div">
                 <i class="fa-solid fa-cart-arrow-down"></i>
-                <span>0</span>
+                <span id="cartCount">0</span>
+            </div>
+            <span id="cross" class="cross" style="display:none;">✖</span>
+            <div id="addProdductList" class="addProdductList" style="display:none;">
+                <!-- <h1>list card</h1> -->
             </div>
         </div>
     </header>
